src/test/deca/context/invalid/resultats/test_GEQ_class-cont.res
./src/test/deca/context/invalid/test_GEQ_class.deca:23:15: The types are incompatible for a Inequality Operation
